fixed nav items/got contact links aligned (for most part)

--- a/style.css
+++ b/style.css
@@ -31,12 +31,10 @@ h1 {
 }
 .topnav {
     overflow: hidden;
-    background-color: #333;
 } 
 .topnav a {
   margin: 15px 0px;
   color: rgb(193, 247, 215);
-  display: flex;
   list-style: none;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
@@ -130,8 +128,14 @@ h2 {
   flex-direction: column;
 }
 .flexcontainer-2 {
-    padding-top: 130px;
-   justify-content: space-around;
+  padding-top: 130px;
+  width: 70%;
+   display: flex;
+   justify-content: space-between;
+   flex-wrap: wrap;
+   flex-direction: row;
+   margin: 0 auto;
+   padding-left: 35px;
 }
 .row-1 {
     display: flex;
